--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,28 @@
-name: Build & Deploy
+name: Build and Deploy to ECR and EKS
 
 on:
   push:
     branches:
       - main
 
+env:
+  AWS_REGION: eu-north-1
+  IMAGE_REPO: my-simple-app
+
 jobs:
   build-and-deploy:
-    name: Build Docker & Deploy to EKS
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: eu-north-1
-      IMAGE_REPO: my-simple-app
-      NAMESPACE: my-app-namespace
-      ECR_URL: ${{ secrets.ECR_URL }}      # Existing ECR repository URL
-      EKS_NAME: ${{ secrets.EKS_NAME }}    # Existing EKS cluster name
+
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v4
 
+      # 2️⃣ Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 3️⃣ Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -26,60 +30,57 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to ECR
+      # 4️⃣ Log in to Amazon ECR
+      - name: Login to Amazon ECR
         run: |
-          docker login --username AWS --password $(aws ecr get-login-password --region ${{ env.AWS_REGION }}) ${{ env.ECR_URL }}
-
-      - name: Build & Push Docker Image
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
+          docker login --username AWS --password-stdin $(echo "${{ secrets.ECR_REGISTRY }}" | tr -d '\n' | tr -d '\r')
+      # 5️⃣ Build and push Docker image (unique tag per commit)
+      - name: Build and push Docker image
         run: |
-          IMAGE_TAG=${GITHUB_SHA::7}  # Short SHA for tag
-          IMAGE_NAME="${{ env.ECR_URL }}/${{ env.IMAGE_REPO }}:$IMAGE_TAG"
+          ECR_REGISTRY=$(echo "${{ secrets.ECR_REGISTRY }}" | tr -d '\n' | tr -d '\r')
+          IMAGE_TAG=${{ github.sha }}
+          IMAGE_NAME="${ECR_REGISTRY}/${{ env.IMAGE_REPO }}:$IMAGE_TAG"
           echo "Building image: $IMAGE_NAME"
-          docker buildx build --platform linux/amd64,linux/arm64 -t "$IMAGE_NAME" --push .
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t "$IMAGE_NAME" \
+            --push .
           echo "IMAGE_URI=$IMAGE_NAME" >> $GITHUB_ENV
-
+      # 6️⃣ Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.30.0'
 
-      - name: Configure kubeconfig
+      # 7️⃣ Configure kubeconfig for EKS cluster
+      - name: Configure kubeconfig for EKS
         run: |
-          aws eks update-kubeconfig --name ${{ env.EKS_NAME }} --region ${{ env.AWS_REGION }}
-          kubectl config get-contexts
+          aws eks update-kubeconfig --name my-eks-cluster --region ${{ env.AWS_REGION }}
           kubectl get nodes
-
-      - name: Ensure Namespace Exists
-        run: |
-          kubectl get namespace ${{ env.NAMESPACE }} || kubectl create namespace ${{ env.NAMESPACE }}
-
+      # 8️⃣ Deploy to EKS with new image
       - name: Deploy to EKS
         run: |
-          DEPLOYMENT_NAME=my-simple-app
-          kubectl -n ${{ env.NAMESPACE }} get deployment $DEPLOYMENT_NAME || kubectl create deployment $DEPLOYMENT_NAME --image=$IMAGE_URI -n ${{ env.NAMESPACE }}
           echo "Updating deployment with image: $IMAGE_URI"
-          kubectl -n ${{ env.NAMESPACE }} set image deployment/$DEPLOYMENT_NAME $DEPLOYMENT_NAME=$IMAGE_URI
-          kubectl -n ${{ env.NAMESPACE }} rollout status deployment/$DEPLOYMENT_NAME
+          kubectl set image deployment/my-simple-app my-simple-app=$IMAGE_URI
+          echo "Waiting for rollout..."
+          kubectl rollout status deployment/my-simple-app
+      # 9️⃣ Verify pods
+      - name: Verify pods
+        run: kubectl get pods -o wide
 
-      - name: Verify Pods
-        run: kubectl -n ${{ env.NAMESPACE }} get pods -o wide
-
-      - name: Expose Service if not exists
-        run: |
-          SERVICE_NAME=my-simple-app-service
-          kubectl -n ${{ env.NAMESPACE }} get svc $SERVICE_NAME || \
-          kubectl -n ${{ env.NAMESPACE }} expose deployment my-simple-app --type=LoadBalancer --name=$SERVICE_NAME --port=80 --target-port=80
-
+      # 🔟 Get LoadBalancer URL
       - name: Get LoadBalancer URL
         id: get-url
         run: |
-          URL=$(kubectl -n ${{ env.NAMESPACE }} get svc my-simple-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+          URL=$(kubectl get svc my-simple-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+          echo "Live URL: http://$URL"
           echo "url=http://$URL" >> $GITHUB_OUTPUT
-
+      # 11️⃣ Show live application link
       - name: Show live application link
         run: |
           echo "✅ Your app is live at:"
           echo "${{ steps.get-url.outputs.url }}"
+      # 12️⃣ Cleanup
+      - name: Cleanup
+        run: docker image prune -af
