--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,6 +9,8 @@ env:
   AWS_REGION: eu-north-1
   IMAGE_REPO: my-simple-app
   ECR_REGISTRY: 332427206046.dkr.ecr.eu-north-1.amazonaws.com
+  EKS_CLUSTER: my-eks-cluster
+  K8S_NAMESPACE: default
 
 jobs:
   build-and-deploy:
@@ -31,14 +33,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 4️⃣ Login to Amazon ECR
+      # 4️⃣ Ensure ECR repository exists
+      - name: Create ECR repository if not exists
+        run: |
+          aws ecr describe-repositories --repository-names ${{ env.IMAGE_REPO }} >/dev/null 2>&1 || \
+          aws ecr create-repository --repository-name ${{ env.IMAGE_REPO }}
+          echo "ECR repository ${{ env.IMAGE_REPO }} is ready."
+
+      # 5️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
         run: |
           echo "Logging in to ECR: ${{ env.ECR_REGISTRY }}"
           aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
             docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
 
-      # 5️⃣ Build and push Docker image
+      # 6️⃣ Build and push Docker image
       - name: Build and push Docker image
         run: |
           IMAGE_TAG=${{ github.sha }}
@@ -50,44 +59,64 @@ jobs:
             --push .
           echo "IMAGE_URI=$IMAGE_NAME" >> $GITHUB_ENV
 
-      # 6️⃣ Set up kubectl
+      # 7️⃣ Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.30.0'
 
-      # 7️⃣ Configure kubeconfig for EKS cluster
+      # 8️⃣ Configure kubeconfig for EKS cluster
       - name: Configure kubeconfig for EKS
         run: |
-          aws eks update-kubeconfig --name my-eks-cluster --region ${{ env.AWS_REGION }}
+          aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
           kubectl get nodes
 
-      # 8️⃣ Deploy to EKS with new image
+      # 9️⃣ Ensure Kubernetes deployment exists
+      - name: Create deployment if not exists
+        run: |
+          if ! kubectl get deployment ${{ env.IMAGE_REPO }} -n ${{ env.K8S_NAMESPACE }} >/dev/null 2>&1; then
+            echo "Deployment not found. Creating deployment..."
+            kubectl create deployment ${{ env.IMAGE_REPO }} \
+              --image=$IMAGE_URI -n ${{ env.K8S_NAMESPACE }}
+          fi
+
+      # 🔟 Ensure service exists
+      - name: Create service if not exists
+        run: |
+          if ! kubectl get svc ${{ env.IMAGE_REPO }}-service -n ${{ env.K8S_NAMESPACE }} >/dev/null 2>&1; then
+            echo "Service not found. Creating LoadBalancer service..."
+            kubectl expose deployment ${{ env.IMAGE_REPO }} \
+              --type=LoadBalancer --name=${{ env.IMAGE_REPO }}-service -n ${{ env.K8S_NAMESPACE }}
+          fi
+
+      # 11️⃣ Update deployment with new image
       - name: Deploy to EKS
         run: |
           echo "Updating deployment with image: $IMAGE_URI"
-          kubectl set image deployment/${{ env.IMAGE_REPO }} ${{ env.IMAGE_REPO }}=$IMAGE_URI
+          kubectl set image deployment/${{ env.IMAGE_REPO }} \
+            ${{ env.IMAGE_REPO }}=$IMAGE_URI -n ${{ env.K8S_NAMESPACE }}
           echo "Waiting for rollout..."
-          kubectl rollout status deployment/${{ env.IMAGE_REPO }}
+          kubectl rollout status deployment/${{ env.IMAGE_REPO }} -n ${{ env.K8S_NAMESPACE }}
 
-      # 9️⃣ Verify pods
+      # 12️⃣ Verify pods
       - name: Verify pods
-        run: kubectl get pods -o wide
+        run: kubectl get pods -o wide -n ${{ env.K8S_NAMESPACE }}
 
-      # 🔟 Get LoadBalancer URL
+      # 13️⃣ Get LoadBalancer URL
       - name: Get LoadBalancer URL
         id: get-url
         run: |
-          URL=$(kubectl get svc ${{ env.IMAGE_REPO }}-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+          URL=$(kubectl get svc ${{ env.IMAGE_REPO }}-service -n ${{ env.K8S_NAMESPACE }} \
+                -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
           echo "Live URL: http://$URL"
           echo "url=http://$URL" >> $GITHUB_OUTPUT
 
-      # 11️⃣ Show live application link
+      # 14️⃣ Show live application link
       - name: Show live application link
         run: |
           echo "✅ Your app is live at:"
           echo "${{ steps.get-url.outputs.url }}"
 
-      # 12️⃣ Cleanup
+      # 15️⃣ Cleanup
       - name: Cleanup
         run: docker image prune -af
